# vector_from_scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Vector.hpp
src/: Vector.cpp  main.cpp
